<resources>
    <string name="app_name">StockIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">StockIt</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="First_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="email">email</string>
    <string name="confirm_email">confirm email</string>
    <string name="phone_number">phone number</string>
    <string name="confirm_phone_number">confirm phone number</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="send_sms">Send SMS</string>
    <string name="open_dialer">Open Dialer</string>

    <string name="menu_alerts">Reorder Products</string>
    <string name="menu_Bluetooth">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_account">Account</string>
    <string name="menu_help">Help</string>
    <string name="menu_aboutUs">Contact us</string>
    <string name="title_activity_barcode_search">Barcode Search</string>
    <string name="title_activity_view_product">Product Details</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_alerts_list">Reorder Products</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_account_managment">Account Managment</string>
    <string name="title_activity_help__page">Help</string>
    <string name="title_activity_about_us">Contact Us</string>

</resources>
