<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_Bluetooth" />

        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_menu_alert"
            android:title="@string/menu_alerts" />



        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_account" />
    </group>

    <item android:title="General Information">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_About_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_aboutUs" />
        </menu>
    </item>

</menu>
