<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/rect_text_edit"
        android:hint="@string/Full_name"
        android:padding="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/rect_text_edit"
        android:hint="@string/email"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/rect_text_edit"
        android:hint="@string/phone_number"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="80dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null" />
    <Button
        android:id="@+id/save_button"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp"
        android:layout_height="1dp"
        android:layout_weight="6"
        android:background="#377d9d"/>

</LinearLayout>