<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="582dp"
        android:orientation="vertical"
        android:paddingTop="100dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rect_text_edit"
            android:hint="@string/First_name"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rect_text_edit"
            android:hint="@string/Last_name"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rect_text_edit"
            android:hint="@string/email"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rect_text_edit"
            android:hint="@string/phone_number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit_save_button"
            android:fontFamily="sans-serif"
            android:text="EDIT"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/edit_save_button"
            android:fontFamily="sans-serif"
            android:text="SAVE"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>


